# MathInterpreter

./: .gitignore  CMakeLists.txt  CustomMath.h  DataTypes.h  Input.h  Lexer.h  MathEval.c
Helpers/: AdditionalString.h  CustomMath.h  DataTypes.h
